core/compiler/tests/programs/ok/local_type.loz
f x = g x
where
    :: G = G Int

    g x = h (G x)

    h (G x) = x * 18
.

main = f 9
