core/compiler/tests/programs/type_err/local_type_scope.loz
f x = g x
where
    :: G = G Int

    g x = h (G x)

    h (G x) = x
.

i x = j x
where
    j x = k (G x)
    k (G x) = x
.

main = f 19